refactor: DTO가 아닌 List<MemberCoupon>에 대해 캐싱 적용